crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_shortstat_only_deletions.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
DiffShortstat {
    files_changed: 1,
    insertions: 0,
    deletions: 1,
}
