crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_diff_shortstat_single_file.snap
---
source: crates/gitr/src/parse/mod.rs
expression: s
---
DiffShortstat {
    files_changed: 1,
    insertions: 3,
    deletions: 0,
}
