crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_grep_basic.snap
---
source: crates/gitr/src/parse/mod.rs
expression: r
---
[
    GitGrepResult {
        path: "src/main.rs",
        line: 10,
        text: "fn main() {}",
    },
    GitGrepResult {
        path: "src/lib.rs",
        line: 5,
        text: "pub fn add() {}",
    },
]
