crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_grep_colons_in_text.snap
---
source: crates/gitr/src/parse/mod.rs
expression: r
---
[
    GitGrepResult {
        path: "a.txt",
        line: 1,
        text: "x: y: z",
    },
]
