crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_grep_multiple_matches.snap
---
source: crates/gitr/src/parse/mod.rs
expression: r
---
[
    GitGrepResult {
        path: "src/main.rs",
        line: 1,
        text: "fn foo() {}",
    },
    GitGrepResult {
        path: "src/main.rs",
        line: 2,
        text: "fn bar() {}",
    },
    GitGrepResult {
        path: "src/lib.rs",
        line: 10,
        text: "struct Baz;",
    },
]
