crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_log_line_invalid_timestamp.snap
---
source: crates/gitr/src/parse/mod.rs
expression: err
---
Parse(
    "invalid timestamp in log line 'abc123|msg|author|bad': invalid digit found in string",
)
