crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_log_line_normal.snap
---
source: crates/gitr/src/parse/mod.rs
expression: entry
---
GitLogEntry {
    sha: "abc123",
    short_sha: "abc123",
    message: "hello",
    author: "alice",
    timestamp: "1700000000",
}
