crates/gitr/src/parse/snapshots/gitr__parse__tests__snapshot_parse_merge_tree_clean.snap
---
source: crates/gitr/src/parse/mod.rs
expression: m
---
GitMergeResult {
    has_conflicts: false,
    conflict_files: [],
    tree_oid: Some(
        "aabbccdd00112233445566778899aabbccdd0011",
    ),
}
